refactor: footer copyright

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <footer class="container_footer">
         <section class="footer">
             <p>&copy; 2023 FlexTurismos</p>
-            <p>Desenvolvido por: Luizadebrito</p>
+            <p>By: Luizadebrito</p>
         </section>
     </footer>
 
