--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
         <section class="section_apresentacao">
             <div class="apresentacao_container">
                 <div id="conteudo">
-                    <h1>Flex <br> Turismos</h1>
-                    <p>O melhor serviço para você!</p>
+                    <div class="apresentacao_do_conteudo">
+                        <h1>Flex <br> Turismos</h1>
+                        <p>O melhor serviço para você!</p>
+                    </div>
                     <div class="botao_primario">
                         <a href="#">Saiba Mais!</a>
                     </div>
